<resources>
    <string name="app_name">IMusic</string>
    <string name="tv_back">Back</string>
    <string name="tv_search">Search</string>
    <string name="tv_my_music">My music</string>
    <string name="tv_song">SONG</string>
    <string name="tv_playlist">Playlist</string>
    <string name="tv_favorite">Favorite</string>
    <string name="tv_no_songs">No songs</string>
    <string name="tv_previous">Previous</string>
    <string name="tv_play">Play</string>
    <string name="tv_playing">Playing Music</string>
    <string name="tv_next">Next</string>
    <string name="tv_no_playlist">No Playlist</string>
    <string name="tv_no_favorite">No Favorite</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_instruction">Instruction</string>
    <string name="tv_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tv_recently_songs">Recently Songs</string>
    <string name="tv_albums">Albums</string>
    <string name="tv_artist">Artist</string>
    <string name="tv_coming">Coming</string>
    <string name="tv_home">Home</string>
    <string name="tv_count_song">Song :</string>
    <string name="tv_delete">delete</string>
    <string name="tv_no_album">No album</string>
    <string name="tv_no_artist">No Artist</string>
    <string name="tv_create_playlist_success">Create playlist success</string>
    <string name="tv_time">00:00</string>
    <string name="tv_ok">OK</string>
    <string name="tv_playlist_name">Playlist name</string>
    <string name="tv_create_playlist">Create playlist</string>
    <string name="tv_add_song_to_playlist">Add song to playlist</string>
    <string name="tv_add_song_to_favorite">Add song to favorite</string>
    <string name="tv_edit_playlist">Edit Playlist</string>
    <string name="tv_please_enter_playlist_name">Please enter playlist name</string>
    <string name="tv_delete_playlist_successfully">Delete playlist successfully</string>
    <string name="tv_edit_name_playlist_successfully">Edit name playlist successfully</string>
    <string name="tv_list_song">Danh sách phát</string>
</resources>
