<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:minWidth="@dimen/dp_300"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_15">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_create_playlist"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_17" />

        <EditText
            android:id="@+id/edtPlayListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@android:color/transparent"
            android:hint="@string/tv_playlist_name"
            android:inputType="textMultiLine"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#a4a4a4"
            android:textSize="@dimen/text_size_15"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/tv_ok"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_17" />
    </LinearLayout>
</LinearLayout>
