<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF"
    android:orientation="vertical">

    <include
        android:id="@+id/view_top"
        layout="@layout/layout_navigation" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_player"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/view_seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_current_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:gravity="center_vertical"
            android:text="@string/tv_time"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_10"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/sb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:gravity="center_vertical"
            android:text="@string/tv_time"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_10"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <ImageView
            android:id="@+id/imv_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:contentDescription="@string/tv_previous"
            android:src="@drawable/ic_btn_pre" />

        <ImageView
            android:id="@+id/imv_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:contentDescription="@string/tv_play"
            android:src="@drawable/ic_btn_play" />

        <ImageView
            android:id="@+id/imv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:contentDescription="@string/tv_next"
            android:src="@drawable/ic_btn_next" />
    </LinearLayout>
</LinearLayout>
