<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:orientation="vertical">

        <include layout="@layout/layout_navigation" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/view_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/tab_my_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_30"
                android:orientation="vertical"
                android:padding="@dimen/dp_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_music" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="center"
                    android:text="@string/tv_my_music"
                    android:textAllCaps="true"
                    android:textColor="@color/text_title_color_tab"
                    android:textSize="@dimen/text_size_10"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/tv_albums"
                    android:src="@drawable/ic_album" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="center"
                    android:text="@string/tv_albums"
                    android:textAllCaps="true"
                    android:textColor="@color/text_title_color_tab"
                    android:textSize="@dimen/text_size_10"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:orientation="vertical"
                android:padding="@dimen/dp_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/tv_artist"
                    android:src="@drawable/ic_artist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="center"
                    android:text="@string/tv_artist"
                    android:textAllCaps="true"
                    android:textColor="@color/text_title_color_tab"
                    android:textSize="@dimen/text_size_10"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frm_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/view_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CECECE"
            android:padding="@dimen/dp_5">

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/imv_song_playing"
                android:layout_width="@dimen/image_50"
                android:layout_height="@dimen/image_50"
                app:civ_border_color="#000"
                app:civ_border_width="@dimen/dp_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_7"
                android:layout_marginLeft="@dimen/dp_7"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imv_song_playing"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_name_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_15"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name_singer_playing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_13"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btn_pre_playing"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@string/tv_previous"
                    android:src="@drawable/ic_btn_pre" />

                <ImageView
                    android:id="@+id/btn_play_playing"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@string/tv_play"
                    android:src="@drawable/ic_btn_play" />

                <ImageView
                    android:id="@+id/btn_next_playing"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_margin="@dimen/dp_5"
                    android:contentDescription="@string/tv_next"
                    android:src="@drawable/ic_btn_next" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</LinearLayout>
